# CppTemplate

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.py  main.cpp  main.hpp  main_bench.cxx  main_test.cxx
.devcontainer/: Dockerfile  devcontainer.json
scripts/: build_debug.sh  build_release.sh  install_deps.sh
